syntax = "proto3";
package eganow.api.common;

option go_package = "github.com/eganow/core/api;pb";

import "google/api/annotations.proto";
import "eganow/api/common/shared_payload.proto";

service CommonDataSvc {
  // get countries list
  rpc GetCountries (GetCountriesRequest) returns (GetCountriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/common/countries/{filter}"
    };
  }
}